# connx

./: .clabot  .clang-format  .editorconfig  .flake8  .gitignore  .gitmodules  .ycm_extra_conf.py  CONTRIBUTING.ko.md  CONTRIBUTING.md  INSTALL.md  LICENSE  Makefile  OPERATORS.md  README.md  TODO.md  connx  examples  pyproject.toml
.github/workflows/: build.yml  ccpp.yml  lint.yml
docs/: LICENSE.connx_gplv3  LICENSE.connx_mit  PERFORMANCE.md
examples/: README.md  download.sh  mnist.c
examples/mnist/: 0.text  0_1.data  0_1_1_3_5_4_3.data  0_1_1_4_16_4_4_10.data  0_2.data  0_2_1_1_5.data  0_2_1_4_16_8_5_5.data  0_3.data  0_3_1_4_8_1_5_5.data  0_4.data  0_4_1_3_8_1_1.data  0_5.data  0_5_1_3_16_1_1.data  0_6.data  0_6_7_1_2.data  0_7.data  0_7_7_1_2.data  0_8.data  attr.db  (+5 more)
examples/mnist-8/: init.db
include/: accel.h  connx.h  hal.h  opset.h  tensor.h  types.h
linux/: accel.c  hal.c  main.c
pyconnx/: .gitignore  bindings.py  build_package.py  connx.py  test.py  types.py
src/: accel.c  connx.c  dump.c  hal.c  hal_linux.c  main.c  onnx.c  opset.c  opset.h  opset_Add.c  opset_BatchNormalization.c  opset_Cast.c  opset_Ceil.c  opset_Concat.c  opset_Conv.c  opset_Div.c  opset_Exp.c  opset_GlobalAveragePool.c  opset_Identity.c  opset_LeakyRelu.c  opset_Loop.c  opset_MatMul.c  opset_MaxPool.c  opset_Mul.c  opset_NonMaxSuppression.c  opset_ReduceMin.c  opset_Relu.c  opset_Reshape.c  opset_Resize.c  opset_Round.c  opset_Shape.c  opset_Sigmoid.c  opset_Slice.c  opset_Squeeze.c  opset_Sub.c  opset_Tile.c  opset_Transpose.c  opset_Unsqueeze.c  pal_linux.c  tensor.c  (+2 more)
test/: .gitignore  .ycm_extra_conf.py  Makefile  README.md  common.py  rt_onnxruntime.py  test.py  tf_runtime.py  torch.py
(+1706 files in other folders)
